--- a/notebook/SALIGAN.ipynb
+++ b/notebook/SALIGAN.ipynb
@@ -17,8 +17,9 @@
     "import torch.utils.data as data\n",
     "import torchvision.transforms as transforms\n",
     "\n",
+    "\n",
     "class SALICONDataset(data.Dataset):\n",
-    "    def __init__(self, root_dataset_dir, val_mode = False):\n",
+    "    def __init__(self, root_dataset_dir, val_mode=False):\n",
     "        \"\"\"\n",
     "        SALICONデータセットを読み込むためのDatasetクラス\n",
     "        \n",
@@ -35,9 +36,10 @@
     "        self.distribution_target_dir = os.path.join(self.root_dataset_dir, 'SALICON/algmaps')\n",
     "        self.img_tail = '.jpg'\n",
     "        self.distribution_target_tail = '.png'\n",
-    "        self.transform = transforms.Compose([transforms.Resize((192, 256)), transforms.ToTensor(), transforms.Normalize([0.5], [0.5])])\n",
+    "        self.transform = transforms.Compose(\n",
+    "            [transforms.Resize((192, 256)), transforms.ToTensor(), transforms.Normalize([0.5], [0.5])])\n",
     "        self.distribution_transform = transforms.Compose([transforms.Resize((192, 256)), transforms.ToTensor()])\n",
-    "        \n",
+    "\n",
     "        if val_mode:\n",
     "            train_or_val = \"val\"\n",
     "        else:\n",
@@ -47,14 +49,15 @@
     "        for data_id in open(imgsets_file).readlines():\n",
     "            data_id = data_id.strip()\n",
     "            img_file = os.path.join(self.img_dir, '{0}{1}'.format(data_id, self.img_tail))\n",
-    "            distribution_target_file = os.path.join(self.distribution_target_dir, '{0}{1}'.format(data_id, self.distribution_target_tail))\n",
+    "            distribution_target_file = os.path.join(self.distribution_target_dir,\n",
+    "                                                    '{0}{1}'.format(data_id, self.distribution_target_tail))\n",
     "            files.append({\n",
     "                'img': img_file,\n",
     "                'distribution_target': distribution_target_file,\n",
     "                'data_id': data_id\n",
     "            })\n",
     "        self.files = files\n",
-    "        \n",
+    "\n",
     "    def __len__(self):\n",
     "        return len(self.files)\n",
     "\n",
@@ -75,7 +78,7 @@
     "        distribution_target_file = data_file['distribution_target']\n",
     "        distribution_target = Image.open(distribution_target_file)\n",
     "        data.append(distribution_target)\n",
-    "        \n",
+    "\n",
     "        # transform\n",
     "        data[0] = self.transform(data[0])\n",
     "        data[1] = self.distribution_transform(data[1])\n",
@@ -329,10 +332,10 @@
     "\n",
     "#-----------------\n",
     "# SETTING\n",
-    "root_dataset_dir = \"\" # SALICONデータセットの上のディレクトリのパス\n",
-    "alpha = 0.005 # Generatorの損失関数のハイパーパラメータ。論文の推奨値は0.005\n",
+    "root_dataset_dir = \"\"  # SALICONデータセットの上のディレクトリのパス\n",
+    "alpha = 0.005  # Generatorの損失関数のハイパーパラメータ。論文の推奨値は0.005\n",
     "epochs = 120\n",
-    "batch_size = 32 # 論文では32\n",
+    "batch_size = 32  # 論文では32\n",
     "#-----------------\n",
     "\n",
     "# 開始時間をファイル名に利用\n",
@@ -346,14 +349,16 @@
     "\n",
     "# データローダーの読み込み\n",
     "train_dataset = SALICONDataset(\n",
-    "                    root_dataset_dir,\n",
-    "                )\n",
-    "train_loader = torch.utils.data.DataLoader(train_dataset, batch_size = batch_size, shuffle=True, num_workers = 4, pin_memory=True, sampler=None)\n",
+    "    root_dataset_dir,\n",
+    ")\n",
+    "train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=batch_size, shuffle=True, num_workers=4,\n",
+    "                                           pin_memory=True, sampler=None)\n",
     "val_dataset = SALICONDataset(\n",
-    "                    root_dataset_dir,\n",
-    "                    val_mode=True\n",
-    "                )\n",
-    "val_loader = torch.utils.data.DataLoader(val_dataset, batch_size = 1, shuffle=False, num_workers = 4, pin_memory=True, sampler=None)\n",
+    "    root_dataset_dir,\n",
+    "    val_mode=True\n",
+    ")\n",
+    "val_loader = torch.utils.data.DataLoader(val_dataset, batch_size=1, shuffle=False, num_workers=4, pin_memory=True,\n",
+    "                                         sampler=None)\n",
     "\n",
     "# モデルと損失関数の読み込み\n",
     "loss_func = torch.nn.BCELoss().to(DEVICE)\n",
@@ -362,22 +367,22 @@
     "\n",
     "# 最適化手法の定義（論文中の設定を使用）\n",
     "optimizer_G = torch.optim.Adagrad([\n",
-    "                {'params': generator.encoder_last.parameters()},\n",
-    "                {'params': generator.decoder.parameters()}\n",
-    "            ], lr=0.0001, weight_decay=3*0.0001)\n",
-    "optimizer_D = torch.optim.Adagrad(discriminator.parameters(), lr=0.0001, weight_decay=3*0.0001)\n",
+    "    {'params': generator.encoder_last.parameters()},\n",
+    "    {'params': generator.decoder.parameters()}\n",
+    "], lr=0.0001, weight_decay=3 * 0.0001)\n",
+    "optimizer_D = torch.optim.Adagrad(discriminator.parameters(), lr=0.0001, weight_decay=3 * 0.0001)\n",
     "\n",
     "# 学習\n",
     "for epoch in range(epochs):\n",
-    "    n_updates = 0 # イテレーションのカウント\n",
+    "    n_updates = 0  # イテレーションのカウント\n",
     "    n_discriminator_updates = 0\n",
     "    n_generator_updates = 0\n",
     "    d_loss_sum = 0\n",
     "    g_loss_sum = 0\n",
-    "    \n",
+    "\n",
     "    for i, data in enumerate(train_loader):\n",
-    "        imgs = data[0] # ([batch_size, rgb, h, w])\n",
-    "        salmaps = data[1] # ([batch_size, 1, h, w])\n",
+    "        imgs = data[0]  # ([batch_size, rgb, h, w])\n",
+    "        salmaps = data[1]  # ([batch_size, 1, h, w])\n",
     "\n",
     "        # Discriminator用のラベルを作成\n",
     "        valid = Variable(torch.FloatTensor(imgs.shape[0], 1).fill_(1.0), requires_grad=False).to(DEVICE)\n",
@@ -394,30 +399,30 @@
     "\n",
     "            optimizer_G.zero_grad()\n",
     "            gen_salmaps = generator(imgs)\n",
-    "            \n",
+    "\n",
     "            # Discriminatorへの入力用に元の画像と生成したSaliency Mapを結合して4チャンネルの配列を作る\n",
-    "            fake_d_input = torch.cat((imgs, gen_salmaps.detach()), 1) # ([batch_size, rgbs, h, w])\n",
-    "            \n",
+    "            fake_d_input = torch.cat((imgs, gen_salmaps.detach()), 1)  # ([batch_size, rgbs, h, w])\n",
+    "\n",
     "            # Generatorの損失関数を計算\n",
     "            g_loss1 = loss_func(gen_salmaps, real_salmaps)\n",
     "            g_loss2 = loss_func(discriminator(fake_d_input), valid)\n",
-    "            g_loss = alpha*g_loss1 + g_loss2\n",
-    "            \n",
+    "            g_loss = alpha * g_loss1 + g_loss2\n",
+    "\n",
     "            g_loss.backward()\n",
     "            optimizer_G.step()\n",
-    "            \n",
+    "\n",
     "            g_loss_sum += g_loss.item()\n",
     "            n_generator_updates += 1\n",
-    "            \n",
+    "\n",
     "        else:\n",
     "            # ---------------------\n",
     "            #  Train Discriminator\n",
     "            # ---------------------\n",
     "\n",
     "            optimizer_D.zero_grad()\n",
-    "            \n",
+    "\n",
     "            # Discriminatorへの入力用に元の画像と正解データのSaliency Mapを結合して4チャンネルの配列を作る            \n",
-    "            real_d_input = torch.cat((imgs, real_salmaps), 1) # ([batch_size, rgbs, h, w])\n",
+    "            real_d_input = torch.cat((imgs, real_salmaps), 1)  # ([batch_size, rgbs, h, w])\n",
     "\n",
     "            # Discriminatorの損失関数を計算\n",
     "            real_loss = loss_func(discriminator(real_d_input), valid)\n",
@@ -426,31 +431,34 @@
     "\n",
     "            d_loss.backward()\n",
     "            optimizer_D.step()\n",
-    "            \n",
+    "\n",
     "            d_loss_sum += d_loss.item()\n",
     "            n_discriminator_updates += 1\n",
-    "            \n",
+    "\n",
     "        n_updates += 1\n",
-    "        if n_updates%10==0:\n",
-    "            if n_discriminator_updates>0:\n",
+    "        if n_updates % 10 == 0:\n",
+    "            if n_discriminator_updates > 0:\n",
     "                print(\n",
     "                    \"[%d/%d (%d/%d)] [loss D: %f, G: %f]\"\n",
-    "                    % (epoch, epochs-1, i, len(train_loader), d_loss_sum/n_discriminator_updates , g_loss_sum/n_generator_updates)\n",
+    "                    % (epoch, epochs - 1, i, len(train_loader), d_loss_sum / n_discriminator_updates,\n",
+    "                       g_loss_sum / n_generator_updates)\n",
     "                )\n",
     "            else:\n",
     "                print(\n",
     "                    \"[%d/%d (%d/%d)] [loss G: %f]\"\n",
-    "                    % (epoch, epochs-1, i, len(train_loader), g_loss_sum/n_generator_updates)\n",
-    "                )                \n",
-    "    \n",
-    "    # 重みの保存\n",
+    "                    % (epoch, epochs - 1, i, len(train_loader), g_loss_sum / n_generator_updates)\n",
+    "                )\n",
+    "\n",
+    "                # 重みの保存\n",
     "    # 5エポックごとと、最後のエポックを保存する\n",
-    "    if ((epoch+1)%5==0)or(epoch==epochs-1):\n",
-    "        generator_save_path = '{}.pkl'.format(os.path.join(save_dir, \"{}_generator_epoch{}\".format(start_time_stamp, epoch)))\n",
-    "        discriminator_save_path = '{}.pkl'.format(os.path.join(save_dir, \"{}_discriminator_epoch{}\".format(start_time_stamp, epoch)))\n",
+    "    if ((epoch + 1) % 5 == 0) or (epoch == epochs - 1):\n",
+    "        generator_save_path = '{}.pkl'.format(\n",
+    "            os.path.join(save_dir, \"{}_generator_epoch{}\".format(start_time_stamp, epoch)))\n",
+    "        discriminator_save_path = '{}.pkl'.format(\n",
+    "            os.path.join(save_dir, \"{}_discriminator_epoch{}\".format(start_time_stamp, epoch)))\n",
     "        torch.save(generator.state_dict(), generator_save_path)\n",
     "        torch.save(discriminator.state_dict(), discriminator_save_path)\n",
-    "        \n",
+    "\n",
     "    # エポックごとにValidationデータの一部を可視化\n",
     "    with torch.no_grad():\n",
     "        print(\"validation\")\n",
@@ -458,12 +466,12 @@
     "            image = Variable(data[0]).to(DEVICE)\n",
     "            gen_salmap = generator(imgs)\n",
     "            gen_salmap_np = np.array(gen_salmaps.data.cpu())[0, 0]\n",
-    "            \n",
+    "\n",
     "            plt.imshow(np.array(image[0].cpu()).transpose(1, 2, 0))\n",
     "            plt.show()\n",
     "            plt.imshow(gen_salmap_np)\n",
     "            plt.show()\n",
-    "            if i==1:\n",
+    "            if i == 1:\n",
     "                break\n"
    ],
    "id": "35c2acd6bb441083"
@@ -479,7 +487,49 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "",
+   "source": [
+    "# Google drive からfastText日本語モデル(vector_neologd.zip)をダウンロードする\n",
+    "import requests\n",
+    "\n",
+    "URL = \"https://drive.google.com/uc?id=0ByFQ96A4DgSPUm9wVWRLdm5qbmc&export=download\"\n",
+    "\n",
+    "\n",
+    "def request(url, file_id):\n",
+    "    # ダウンロード画面のURL\n",
+    "\n",
+    "    session = requests.Session()\n",
+    "\n",
+    "    response = session.get(url, params={'id': file_id}, stream=True)\n",
+    "    token = get_confirm_token(response)\n",
+    "\n",
+    "    if token:\n",
+    "        params = {'id': file_id, 'confirm': token}\n",
+    "        return session.get(URL, params=params, stream=True)\n",
+    "\n",
+    "    return response\n",
+    "\n",
+    "\n",
+    "def get_confirm_token(response):\n",
+    "    for key, value in response.cookies.items():\n",
+    "        if key.startswith('download_warning'):\n",
+    "            return value\n",
+    "\n",
+    "    return None\n",
+    "\n",
+    "\n",
+    "def save_response_content(response, destination, chunk_size=32768):\n",
+    "    with open(destination, \"wb\") as f:\n",
+    "        for chunk in response.iter_content(chunk_size):\n",
+    "            if chunk:  # filter out keep-alive new chunks\n",
+    "                f.write(chunk)\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    file_id = 'TAKE ID FROM SHAREABLE LINK'\n",
+    "    destination = './data/vector_neologd.zip'  # 保存先パスの指定\n",
+    "    responce = request(file_id, destination)\n",
+    "    save_response_content(responce, destination)\n"
+   ],
    "id": "72ea377256be7a2f"
   }
  ],
