--- a/notebooks/salgan.ipynb
+++ b/notebooks/salgan.ipynb
@@ -13,17 +13,16 @@
     "import zipfile\n",
     "from logging import Logger, getLogger\n",
     "from os import mkdir\n",
-    "from os.path import exists\n",
     "from typing import Callable\n",
     "from urllib.parse import urlparse\n",
     "from zipfile import BadZipFile\n",
     "\n",
     "import numpy as np\n",
     "import requests\n",
-    "from mpl_toolkits.mplot3d.proj3d import transform\n",
     "from requests import Response\n",
     "from torch import no_grad\n",
-    "from torchvision.transforms.v2 import ToTensor\n",
+    "from torch.autograd import Variable\n",
+    "from torchvision.transforms.v2 import ToTensor, RandomHorizontalFlip\n",
     "from tqdm import tqdm\n",
     "\n",
     "KIB = 2 ** 10\n",
@@ -189,7 +188,7 @@
     "import os\n",
     "from typing import Optional\n",
     "\n",
-    "from torch.utils.data import Dataset, DataLoader\n",
+    "from torch.utils.data import Dataset, DataLoader, ConcatDataset\n",
     "\n",
     "from datasets.downloader import Downloader\n",
     "\n",
@@ -356,8 +355,10 @@
     }
    },
    "cell_type": "code",
+   "outputs": [],
+   "execution_count": 1,
    "source": [
-    "from torch.nn import Module, Conv2d, LeakyReLU, Upsample\n",
+    "from torch.nn import Module\n",
     "from torchvision.models import vgg16\n",
     "\n",
     "\n",
@@ -411,13 +412,13 @@
     "        x = self.decoder(x)\n",
     "        return self.output(x)"
    ],
-   "id": "54a588cf448ae4cb",
-   "outputs": [],
-   "execution_count": 1
+   "id": "54a588cf448ae4cb"
   },
   {
    "metadata": {},
    "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
     "from torch.nn import Module, Sequential, Conv2d, LeakyReLU, Upsample, Sigmoid, MaxPool2d, Tanh, Linear\n",
     "\n",
@@ -457,15 +458,13 @@
     "\n",
     "        return x"
    ],
-   "id": "2a43797a7d994f3f",
-   "outputs": [],
-   "execution_count": null
+   "id": "2a43797a7d994f3f"
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "### トレーニングの実装",
-   "id": "c2f5853354be85bf"
+   "source": "### ユーティリティ関数",
+   "id": "31ed7a6f2cbe0fb9"
   },
   {
    "metadata": {},
@@ -473,83 +472,13 @@
    "outputs": [],
    "execution_count": null,
    "source": [
-    "from torch.nn import Module\n",
+    "from datetime import datetime\n",
     "\n",
     "\n",
-    "def train(generator: Module, discriminator: Module, dataloader: DataLoader, criterion: Module, optimizer, device,\n",
-    "          show_stride=100):\n",
-    "    # set train mode\n",
-    "    generator.train()\n",
-    "\n",
-    "    criterion.to(device)\n",
-    "    optimizer.to(device)\n",
-    "    generator.to(device)\n",
-    "    discriminator.to(device)\n",
-    "\n",
-    "    for batch_index, (data, label) in enumerate(dataloader):\n",
-    "        data, label = data.to(device), label.to(data)\n",
-    "\n",
-    "        loss = criterion(label)\n",
-    "\n",
-    "        if batch_index % show_stride == 0:\n",
-    "            print(f\"[<train> batch: {batch_index}]\")\n"
+    "def get_timestamp(date_format=\"{0:%Y%m%d-%H%M%S}\"):\n",
+    "    return date_format.format(datetime.now())"
    ],
-   "id": "2df4803a3fa8995e"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": [
-    "from torch.nn import Module\n",
-    "import torch\n",
-    "\n",
-    "\n",
-    "def test(generator, discriminator, dataloader: DataLoader, criterion, device, show_stride=100):\n",
-    "    criterion.to(device)\n",
-    "    generator.to(device)\n",
-    "    discriminator.to(device)\n",
-    "\n",
-    "    with no_grad():\n",
-    "        for batch_index, (data, label) in enumerate(dataloader):\n",
-    "            data, label = data.to(device), label.to(data)\n",
-    "\n",
-    "            loss = criterion(label)\n",
-    "\n",
-    "            if batch_index % show_stride == 0:\n",
-    "                print(f\"[<train> batch: {batch_index}]\")"
-   ],
-   "id": "45ef0bc4740adefc"
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-04T12:15:18.837193Z",
-     "start_time": "2024-11-04T12:15:18.834304Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "def run(generator, discriminator, train_dataloader, criterion, optimizer, test_dataloader, device, epochs=120):\n",
-    "    for epoch in range(epochs):\n",
-    "        print(\"--- train start ---\")\n",
-    "        train(generator, discriminator, train_dataloader, criterion, optimizer, device)\n",
-    "\n",
-    "        print(\"--- test start ---\")\n",
-    "        test(generator, discriminator, test_dataloader, criterion, device)\n"
-   ],
-   "id": "bfb5a0a1ff4e4c55",
-   "outputs": [],
-   "execution_count": 4
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "### Utils",
-   "id": "57f45855fa03a3f3"
+   "id": "f70a610be0cfb410"
   },
   {
    "metadata": {},
@@ -573,21 +502,7 @@
    "outputs": [],
    "execution_count": null,
    "source": [
-    "from datetime import datetime\n",
-    "\n",
-    "\n",
-    "def get_timestamp(date_format=\"{0:%Y%m%d-%H%M%S}\"):\n",
-    "    return date_format.format(datetime.now())"
-   ],
-   "id": "f70a610be0cfb410"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": [
-    "def predict(generator: Module, transform, image):\n",
+    "def generate_map(generator: Module, transform, image):\n",
     "    with torch.no_grad():\n",
     "        image = transform(image)\n",
     "        saliency_map = generator(image)\n",
@@ -601,6 +516,126 @@
   {
    "metadata": {},
    "cell_type": "markdown",
+   "source": "### トレーニングの実装",
+   "id": "c2f5853354be85bf"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "from torch.nn import Module\n",
+    "from torch.autograd import Variable\n",
+    "from matplotlib.pyplot import plot\n",
+    "import torch\n",
+    "\n",
+    "\n",
+    "def generator_train_step(generator, valid, image, real_map, criterion, optimizer, alpha=0.005):\n",
+    "    optimizer.zero_grad()\n",
+    "    generated_map = generator(image)\n",
+    "\n",
+    "    # Discriminatorへの入力用に元の画像と生成したSaliency Mapを結合して4チャンネルの配列を作る\n",
+    "    fake_d_input = torch.cat((image, generated_map.detach()), 1)  # ([batch_size, rgbs, h, w])\n",
+    "\n",
+    "    # Generatorの損失関数を計算\n",
+    "    g_loss1 = criterion(generated_map, real_map)\n",
+    "    g_loss2 = criterion(discriminator(fake_d_input), valid)\n",
+    "    loss = alpha * g_loss1 + g_loss2\n",
+    "\n",
+    "    loss.backward()\n",
+    "    optimizer.step()\n",
+    "\n",
+    "    return loss.item()\n",
+    "\n",
+    "\n",
+    "def discriminator_train_step(discriminator: Module, fake, valid, image, fake_map, real_map, criterion, optimizer,\n",
+    "                             alpha=0.005):\n",
+    "    optimizer.zero_grad()\n",
+    "\n",
+    "    # Discriminatorへの入力用に元の画像と正解データのSaliency Mapを結合して4チャンネルの配列を作る            \n",
+    "    real_d_input = torch.cat((image, real_map), 1)  # ([batch_size, rgbs, h, w])\n",
+    "\n",
+    "    # Discriminatorの損失関数を計算\n",
+    "    real_loss = criterion(discriminator(real_map), valid)\n",
+    "    fake_loss = criterion(discriminator(fake_map), fake)\n",
+    "    loss = (real_loss + fake_loss) / 2\n",
+    "\n",
+    "    loss.backward()\n",
+    "    return loss.item()\n",
+    "\n",
+    "\n",
+    "def training(generator, discriminator, dataloader, criterion, generator_optimizer, discriminator_optimizer, device):\n",
+    "    discriminator_total_loss = 0\n",
+    "    generator_total_loss = 0\n",
+    "\n",
+    "    for batch_index, (image, real_map) in enumerate(dataloader):\n",
+    "        validate_label = Variable(torch.FloatTensor(image.shape[0], 1).fill_(1.0), requires_grad=False).to(device)\n",
+    "        fake_label = Variable(torch.FloatTensor(image.shape[0], 1).fill_(0.0), requires_grad=False).to(device)\n",
+    "\n",
+    "        image, real_map = image.to(device), real_map.to(device)\n",
+    "\n",
+    "        if batch_index % 2 == 0:\n",
+    "            (loss, fake_map) = generator_train_step(generator, 0, 0, criterion, generator_optimizer)\n",
+    "            generator_total_loss += loss\n",
+    "            # todo:  結果を表示\n",
+    "        else:\n",
+    "            collect = torch.cat((image, real_map), 1)\n",
+    "\n",
+    "            discriminator_total_loss += discriminator_train_step(discriminator, fake_label, validate_label, criterion,\n",
+    "                                                                 discriminator_optimizer)\n",
+    "            # todo: 結果を表示\n",
+    "\n",
+    "\n",
+    "def save_report(start_time_stamp, save_dir=\"./logs\"):\n",
+    "    generator_save_path = f'{os.path.join(save_dir, f\"{start_time_stamp}_generator_epoch{epoch}\")}.pkl'\n",
+    "    discriminator_save_path = f'{os.path.join(save_dir, f\"{start_time_stamp}_discriminator_epoch{epoch}\")}.pkl'\n",
+    "    torch.save(generator.state_dict(), generator_save_path)\n",
+    "    torch.save(discriminator.state_dict(), discriminator_save_path)\n",
+    "\n",
+    "\n",
+    "def testing(generator, discriminator, dataloader: DataLoader, criterion, device, show_stride=100):\n",
+    "    criterion.to(device)\n",
+    "    generator.to(device)\n",
+    "    discriminator.to(device)\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        print(\"validation\")\n",
+    "        for i, (image, _) in enumerate(dataloader):\n",
+    "            image = Variable(image).to(device)\n",
+    "            generated = generator(image)\n",
+    "            generated_np = np.array(generated.data.cpu())[0, 0]\n",
+    "\n",
+    "            plot.imshow(np.array(image[0].cpu()).transpose(1, 2, 0))\n",
+    "            plot.show()\n",
+    "            plot.imshow(generated_np)\n",
+    "            plot.show()\n",
+    "            if i == 1:\n",
+    "                break\n",
+    "\n",
+    "\n",
+    "def run(generator, discriminator, train_dataloader, test_dataloader, criterion, optimizer, device, epoch=120):\n",
+    "    time_stamp = get_timestamp()\n",
+    "\n",
+    "    for current in range(epoch):\n",
+    "        print(\"--- training start ---\")\n",
+    "        training(generator, discriminator, train_dataloader, criterion, optimizer, device)\n",
+    "\n",
+    "        if (current % 5 == 0) or (current == epoch - 1):\n",
+    "            save_report(time_stamp)\n",
+    "\n",
+    "        print(\"--- test start ---\")\n",
+    "        testing(generator, discriminator, test_dataloader, criterion, device)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ],
+   "id": "45ef0bc4740adefc"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
    "source": "### セットアップ",
    "id": "828c1a7e3e44e482"
   },
@@ -610,25 +645,54 @@
    "outputs": [],
    "execution_count": null,
    "source": [
-    "from torchvision.transforms import Compose\n",
+    "# hyper params\n",
+    "epochs = 120\n",
+    "learning_rate = 0.0001\n",
+    "weight_decay = 3 * 0.0001"
+   ],
+   "id": "66c82185c3416fa7"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "from torchvision.transforms import Compose, Resize, ToTensor, Normalize\n",
     "from torch.nn import BCELoss\n",
     "from torch.optim import Adagrad\n",
     "\n",
-    "transforms = Compose([ToTensor()])\n",
+    "image_transform = Compose([Resize((192, 256)), ToTensor()])\n",
+    "map_transform = Compose([Resize((192, 256)), ToTensor(), Normalize([0.5], [0.5])])\n",
     "\n",
-    "salicon_train = SALICONDataset(image_transform=transforms)\n",
-    "salicon_test = SALICONDataset(image_transform=transforms, val_mode=True)\n",
+    "salicon_train = SALICONDataset(image_transform=image_transform, map_transform=map_transform)\n",
+    "salicon_test = SALICONDataset(val_mode=True, image_transform=image_transform, map_transform=map_transform)\n",
     "\n",
-    "train_dataloader = DataLoader(salicon_train, batch_size=32, shuffle=True, pin_memory=True)\n",
-    "test_dataloader = DataLoader(salicon_test, batch_size=8, shuffle=False)\n",
+    "train_dataloader = DataLoader(salicon_train,\n",
+    "                              batch_size=32,\n",
+    "                              shuffle=True,\n",
+    "                              pin_memory=True,\n",
+    "                              num_workers=4)\n",
+    "\n",
+    "test_dataloader = DataLoader(salicon_test,\n",
+    "                             batch_size=8,\n",
+    "                             shuffle=False,\n",
+    "                             pin_memory=True,\n",
+    "                             num_workers=4)\n",
     "\n",
     "generator = Generator()\n",
     "discriminator = Discriminator()\n",
     "\n",
     "criterion = BCELoss()\n",
+    "\n",
     "generator_optimizer = Adagrad([{'params': generator.encoder_last.paramators()},\n",
-    "                               {'params': generator.decoder.paramators()}])\n",
-    "discriminator_optimizer = Adagrad(discriminator.parameters())"
+    "                               {'params': generator.decoder.paramators()}],\n",
+    "                              lr=learning_rate,\n",
+    "                              weight_decay=weight_decay)\n",
+    "\n",
+    "discriminator_optimizer = Adagrad(discriminator.parameters(),\n",
+    "                                  lr=learning_rate,\n",
+    "                                  weight_decay=weight_decay)"
    ],
    "id": "b2aae1c3dd4569db"
   },
@@ -643,7 +707,10 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "",
+   "source": [
+    "for epoch in epochs:\n",
+    "    training(generator, discriminator, test_dataloader)"
+   ],
    "id": "fe02567d7430cb2b"
   }
  ],
