--- a/notebooks/salgan.ipynb
+++ b/notebooks/salgan.ipynb
@@ -19,6 +19,7 @@
     "\n",
     "import numpy as np\n",
     "import requests\n",
+    "from jupyterthemes.stylefx import check_directories\n",
     "from requests import Response\n",
     "from torch import no_grad\n",
     "from torch.autograd import Variable\n",
@@ -486,22 +487,6 @@
    "outputs": [],
    "execution_count": null,
    "source": [
-    "from os.path import exists\n",
-    "from os import makedirs\n",
-    "\n",
-    "\n",
-    "def save_log(save_dir=\"./log\"):\n",
-    "    if not exists(save_dir):\n",
-    "        makedirs(save_dir)"
-   ],
-   "id": "e3f113f1b3997af8"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": [
     "def generate_map(generator: Module, transform, image):\n",
     "    with torch.no_grad():\n",
     "        image = transform(image)\n",
@@ -525,18 +510,23 @@
    "outputs": [],
    "execution_count": null,
    "source": [
-    "from torch.nn import Module\n",
-    "from torch.autograd import Variable\n",
-    "from matplotlib.pyplot import plot\n",
+    "import os\n",
+    "import numpy as np\n",
+    "from datetime import datetime\n",
     "import torch\n",
+    "from torch.nn import Module, BCELoss\n",
+    "from torch.autograd import Variable, no_grad\n",
+    "from torch.utils.data import DataLoader\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "\n",
-    "def generator_train_step(generator, valid, image, real_map, criterion, optimizer, alpha=0.005):\n",
+    "# Generatorのトレーニングステップ\n",
+    "def generator_train_step(generator, discriminator, valid, image, real_map, criterion, optimizer, alpha=0.005):\n",
     "    optimizer.zero_grad()\n",
     "    generated_map = generator(image)\n",
     "\n",
     "    # Discriminatorへの入力用に元の画像と生成したSaliency Mapを結合して4チャンネルの配列を作る\n",
-    "    fake_d_input = torch.cat((image, generated_map.detach()), 1)  # ([batch_size, rgbs, h, w])\n",
+    "    fake_d_input = torch.cat((image, generated_map.detach()), 1)\n",
     "\n",
     "    # Generatorの損失関数を計算\n",
     "    g_loss1 = criterion(generated_map, real_map)\n",
@@ -546,111 +536,105 @@
     "    loss.backward()\n",
     "    optimizer.step()\n",
     "\n",
-    "    return loss.item()\n",
+    "    return loss.item(), generated_map\n",
     "\n",
     "\n",
-    "def discriminator_train_step(discriminator: Module, fake, valid, image, fake_map, real_map, criterion, optimizer,\n",
-    "                             alpha=0.005):\n",
+    "# Discriminatorのトレーニングステップ\n",
+    "def discriminator_train_step(discriminator, fake, valid, image, fake_map, real_map, criterion, optimizer):\n",
     "    optimizer.zero_grad()\n",
     "\n",
-    "    # Discriminatorへの入力用に元の画像と正解データのSaliency Mapを結合して4チャンネルの配列を作る            \n",
-    "    real_d_input = torch.cat((image, real_map), 1)  # ([batch_size, rgbs, h, w])\n",
+    "    # Discriminatorへの入力用に元の画像と正解データのSaliency Mapを結合して4チャンネルの配列を作る\n",
+    "    real_d_input = torch.cat((image, real_map), 1)\n",
+    "    fake_d_input = torch.cat((image, fake_map), 1)\n",
     "\n",
     "    # Discriminatorの損失関数を計算\n",
-    "    real_loss = criterion(discriminator(real_map), valid)\n",
-    "    fake_loss = criterion(discriminator(fake_map), fake)\n",
+    "    real_loss = criterion(discriminator(real_d_input), valid)\n",
+    "    fake_loss = criterion(discriminator(fake_d_input), fake)\n",
     "    loss = (real_loss + fake_loss) / 2\n",
     "\n",
     "    loss.backward()\n",
+    "    optimizer.step()\n",
     "    return loss.item()\n",
     "\n",
     "\n",
+    "# トレーニングループ\n",
     "def training(generator, discriminator, dataloader, criterion, generator_optimizer, discriminator_optimizer, device):\n",
     "    discriminator_total_loss = 0\n",
     "    generator_total_loss = 0\n",
     "\n",
-    "    for batch_index, (image, real_map) in enumerate(dataloader):\n",
-    "        validate_label = Variable(torch.FloatTensor(image.shape[0], 1).fill_(1.0), requires_grad=False).to(device)\n",
-    "        fake_label = Variable(torch.FloatTensor(image.shape[0], 1).fill_(0.0), requires_grad=False).to(device)\n",
+    "    check_directories()\n",
     "\n",
+    "    for batch_index, (image, real_map) in enumerate(dataloader):\n",
+    "        valid = Variable(torch.FloatTensor(image.shape[0], 1).fill_(1.0), requires_grad=False).to(device)\n",
+    "        fake = Variable(torch.FloatTensor(image.shape[0], 1).fill_(0.0), requires_grad=False).to(device)\n",
     "        image, real_map = image.to(device), real_map.to(device)\n",
     "\n",
+    "        # Generator と Discriminator の学習を交互に実行\n",
     "        if batch_index % 2 == 0:\n",
-    "            (loss, fake_map) = generator_train_step(generator, 0, 0, criterion, generator_optimizer)\n",
-    "            generator_total_loss += loss\n",
-    "            # todo:  結果を表示\n",
+    "            g_loss, fake_map = generator_train_step(generator, discriminator, valid, image, real_map, criterion,\n",
+    "                                                    generator_optimizer)\n",
+    "            generator_total_loss += g_loss\n",
+    "            print(f\"Generator Loss: {g_loss:.4f}\")\n",
     "        else:\n",
-    "            collect = torch.cat((image, real_map), 1)\n",
+    "            d_loss = discriminator_train_step(discriminator, fake, valid, image, fake_map, real_map, criterion,\n",
+    "                                              discriminator_optimizer)\n",
+    "            discriminator_total_loss += d_loss\n",
+    "            print(f\"Discriminator Loss: {d_loss:.4f}\")\n",
     "\n",
-    "            discriminator_total_loss += discriminator_train_step(discriminator, fake_label, validate_label, criterion,\n",
-    "                                                                 discriminator_optimizer)\n",
-    "            # todo: 結果を表示\n",
     "\n",
-    "\n",
-    "def save_report(start_time_stamp, save_dir=\"./logs\"):\n",
+    "# 重みとログの保存\n",
+    "def save_report(start_time_stamp, generator, discriminator, epoch, save_dir=\"./logs\"):\n",
+    "    if not os.path.exists(save_dir):\n",
+    "        os.makedirs(save_dir)\n",
     "    generator_save_path = f'{os.path.join(save_dir, f\"{start_time_stamp}_generator_epoch{epoch}\")}.pkl'\n",
     "    discriminator_save_path = f'{os.path.join(save_dir, f\"{start_time_stamp}_discriminator_epoch{epoch}\")}.pkl'\n",
     "    torch.save(generator.state_dict(), generator_save_path)\n",
     "    torch.save(discriminator.state_dict(), discriminator_save_path)\n",
     "\n",
     "\n",
+    "# テスト（検証）フェーズ\n",
     "def testing(generator, discriminator, dataloader: DataLoader, criterion, device, show_stride=100):\n",
-    "    criterion.to(device)\n",
     "    generator.to(device)\n",
     "    discriminator.to(device)\n",
     "\n",
     "    with torch.no_grad():\n",
     "        print(\"validation\")\n",
     "        for i, (image, _) in enumerate(dataloader):\n",
-    "            image = Variable(image).to(device)\n",
+    "            image = image.to(device)\n",
     "            generated = generator(image)\n",
     "            generated_np = np.array(generated.data.cpu())[0, 0]\n",
     "\n",
-    "            plot.imshow(np.array(image[0].cpu()).transpose(1, 2, 0))\n",
-    "            plot.show()\n",
-    "            plot.imshow(generated_np)\n",
-    "            plot.show()\n",
+    "            plt.imshow(np.array(image[0].cpu()).transpose(1, 2, 0))\n",
+    "            plt.show()\n",
+    "            plt.imshow(generated_np)\n",
+    "            plt.show()\n",
     "            if i == 1:\n",
     "                break\n",
     "\n",
     "\n",
-    "def run(generator, discriminator, train_dataloader, test_dataloader, criterion, optimizer, device, epoch=120):\n",
+    "# 学習と検証のメインループ\n",
+    "def run(generator, discriminator, train_dataloader, test_dataloader, criterion, generator_optimizer,\n",
+    "        discriminator_optimizer, device, epochs=120):\n",
     "    time_stamp = get_timestamp()\n",
     "\n",
-    "    for current in range(epoch):\n",
-    "        print(\"--- training start ---\")\n",
-    "        training(generator, discriminator, train_dataloader, criterion, optimizer, device)\n",
+    "    for epoch in range(epochs):\n",
+    "        print(f\"--- Epoch {epoch + 1}/{epochs} - training start ---\")\n",
+    "        training(generator, discriminator, train_dataloader, criterion, generator_optimizer, discriminator_optimizer,\n",
+    "                 device)\n",
     "\n",
-    "        if (current % 5 == 0) or (current == epoch - 1):\n",
-    "            save_report(time_stamp)\n",
+    "        if (epoch % 5 == 0) or (epoch == epochs - 1):\n",
+    "            save_report(time_stamp, generator, discriminator, epoch)\n",
     "\n",
-    "        print(\"--- test start ---\")\n",
-    "        testing(generator, discriminator, test_dataloader, criterion, device)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "        print(f\"--- Epoch {epoch + 1}/{epochs} - testing start ---\")\n",
+    "        testing(generator, discriminator, test_dataloader, criterion, device)\n"
    ],
    "id": "45ef0bc4740adefc"
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "### セットアップ",
+   "source": "### セットアップ と実行",
    "id": "828c1a7e3e44e482"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": [
-    "# hyper params\n",
-    "epochs = 120\n",
-    "learning_rate = 0.0001\n",
-    "weight_decay = 3 * 0.0001"
-   ],
-   "id": "66c82185c3416fa7"
   },
   {
    "metadata": {},
@@ -661,57 +645,47 @@
     "from torchvision.transforms import Compose, Resize, ToTensor, Normalize\n",
     "from torch.nn import BCELoss\n",
     "from torch.optim import Adagrad\n",
+    "import torch\n",
+    "from torch.utils.data import DataLoader\n",
     "\n",
+    "# ハイパーパラメータの設定\n",
+    "learning_rate = 0.0001\n",
+    "weight_decay = 3 * learning_rate\n",
+    "epochs = 120\n",
+    "\n",
+    "# データの前処理\n",
     "image_transform = Compose([Resize((192, 256)), ToTensor()])\n",
     "map_transform = Compose([Resize((192, 256)), ToTensor(), Normalize([0.5], [0.5])])\n",
     "\n",
+    "# データセットの読み込み\n",
     "salicon_train = SALICONDataset(image_transform=image_transform, map_transform=map_transform)\n",
     "salicon_test = SALICONDataset(val_mode=True, image_transform=image_transform, map_transform=map_transform)\n",
     "\n",
-    "train_dataloader = DataLoader(salicon_train,\n",
-    "                              batch_size=32,\n",
-    "                              shuffle=True,\n",
-    "                              pin_memory=True,\n",
-    "                              num_workers=4)\n",
+    "# データローダーの作成\n",
+    "train_dataloader = DataLoader(salicon_train, batch_size=32, shuffle=True, pin_memory=True, num_workers=4)\n",
+    "test_dataloader = DataLoader(salicon_test, batch_size=8, shuffle=False, pin_memory=True, num_workers=4)\n",
     "\n",
-    "test_dataloader = DataLoader(salicon_test,\n",
-    "                             batch_size=8,\n",
-    "                             shuffle=False,\n",
-    "                             pin_memory=True,\n",
-    "                             num_workers=4)\n",
-    "\n",
+    "# モデルの定義\n",
     "generator = Generator()\n",
     "discriminator = Discriminator()\n",
     "\n",
+    "# 損失関数とオプティマイザの設定\n",
     "criterion = BCELoss()\n",
+    "generator_optimizer = Adagrad([\n",
+    "    {'params': generator.encoder_last.parameters()},\n",
+    "    {'params': generator.decoder.parameters()}\n",
+    "], lr=learning_rate, weight_decay=weight_decay)\n",
     "\n",
-    "generator_optimizer = Adagrad([{'params': generator.encoder_last.paramators()},\n",
-    "                               {'params': generator.decoder.paramators()}],\n",
-    "                              lr=learning_rate,\n",
-    "                              weight_decay=weight_decay)\n",
+    "discriminator_optimizer = Adagrad(discriminator.parameters(), lr=learning_rate, weight_decay=weight_decay)\n",
     "\n",
-    "discriminator_optimizer = Adagrad(discriminator.parameters(),\n",
-    "                                  lr=learning_rate,\n",
-    "                                  weight_decay=weight_decay)"
+    "# デバイスの設定\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "# 学習と検証の実行\n",
+    "run(generator, discriminator, train_dataloader, test_dataloader, criterion, generator_optimizer,\n",
+    "    discriminator_optimizer, device, epochs)\n"
    ],
    "id": "b2aae1c3dd4569db"
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": "### 実行",
-   "id": "64efe0ef57f29ff4"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": [
-    "for epoch in epochs:\n",
-    "    training(generator, discriminator, test_dataloader)"
-   ],
-   "id": "fe02567d7430cb2b"
   }
  ],
  "metadata": {
