--- a/notebooks/salgan.ipynb
+++ b/notebooks/salgan.ipynb
@@ -13,17 +13,14 @@
     "import zipfile\n",
     "from logging import Logger, getLogger\n",
     "from os import mkdir\n",
+    "from os.path import exists\n",
     "from typing import Callable\n",
     "from urllib.parse import urlparse\n",
     "from zipfile import BadZipFile\n",
     "\n",
-    "import numpy as np\n",
     "import requests\n",
     "from jupyterthemes.stylefx import check_directories\n",
     "from requests import Response\n",
-    "from torch import no_grad\n",
-    "from torch.autograd import Variable\n",
-    "from torchvision.transforms.v2 import ToTensor, RandomHorizontalFlip\n",
     "from tqdm import tqdm\n",
     "\n",
     "KIB = 2 ** 10\n",
@@ -186,10 +183,10 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "import os\n",
+    "\n",
     "from typing import Optional\n",
     "\n",
-    "from torch.utils.data import Dataset, DataLoader, ConcatDataset\n",
+    "from torch.utils.data import Dataset\n",
     "\n",
     "from datasets.downloader import Downloader\n",
     "\n",
@@ -473,7 +470,7 @@
    "outputs": [],
    "execution_count": null,
    "source": [
-    "from datetime import datetime\n",
+    "\n",
     "\n",
     "\n",
     "def get_timestamp(date_format=\"{0:%Y%m%d-%H%M%S}\"):\n",
@@ -513,9 +510,7 @@
     "import os\n",
     "import numpy as np\n",
     "from datetime import datetime\n",
-    "import torch\n",
-    "from torch.nn import Module, BCELoss\n",
-    "from torch.autograd import Variable, no_grad\n",
+    "from torch.autograd import Variable\n",
     "from torch.utils.data import DataLoader\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
